--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "artify-backend",
+  "name": "artifystorehub-backend",
   "version": "1.0.0",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
+  "type": "module",
+  "scripts": { "start": "node server.js" },
   "dependencies": {
+    "express": "^4.18.2",
+    "nodemailer": "^6.9.9",
     "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "express": "^4.21.2"
+    "cors": "^2.8.5"
   }
 }
+
